# claude-agent-sdk-rs

./: Cargo.toml
src/: client.rs  error.rs  hooks.rs  lib.rs  query.rs  session_management.rs  transport.rs  transport_trait.rs
src/types/: control.rs  event.rs  message.rs  mod.rs  options.rs  params.rs  tool.rs
