[package]
name = "claude-agent-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust port of the Claude Agent SDK — subprocess wrapper around the claude CLI"
license = "MIT"
keywords = ["anthropic", "claude", "ai", "agent", "sdk"]
categories = ["api-bindings", "asynchronous"]
rust-version = "1.75"

[lib]
name = "claude_agent_sdk"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["process", "io-util", "macros", "sync", "time"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
which = "7"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
pretty_assertions = "1"
